--- a/PPKS_Parking_BE_API/PPKS_Parking_BE_API/appsettings.json
+++ b/PPKS_Parking_BE_API/PPKS_Parking_BE_API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=PPKS_Parking;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
